# canadian-retail-credit-risk-xai

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml  model_config.yaml
docs/: FINAL_GITHUB_CHECKLIST.md  GITHUB_PRESENTATION_GUIDE.md  INTERVIEW_TALKING_POINTS.md  PORTFOLIO_SNIPPETS.md  PROJECT_CASE_STUDY.md  PROJECT_SUMMARY.md  REPRODUCIBILITY_RUNBOOK.md
notebooks/: 00_project_brief_and_business_context.ipynb  01_data_ingestion_and_schema_review.ipynb  02_data_quality_assessment.ipynb  03_data_cleaning_and_preprocessing.ipynb  04_credit_risk_eda_and_portfolio_monitoring.ipynb  04_credit_risk_eda_statistical_analysis_and_portfolio_monitoring.ipynb  05_feature_engineering_and_leakage_review.ipynb  06_model_training_and_evaluation.ipynb  06_model_training_evaluation.ipynb  07_threshold_selection_and_business_costing.ipynb  08_explainable_ai_shap_anchors_counterfactuals.ipynb  09_model_governance_and_monitoring.ipynb
reports/governance/: 09_model_card.md  09_model_monitoring_plan.md  09_model_validation_summary.md  09_stakeholder_brief.md  data_dictionary.md  model_card.md  model_validation_summary.md  stakeholder_brief.md
reports/tables/: 01_categorical_cardinality_review.csv  01_data_dictionary_starter.csv  01_dataset_inventory.csv  01_duplicate_user_id_summary.csv  01_ingestion_readiness_gate.csv  01_interim_save_summary.csv  01_leakage_review_initial.csv  01_merge_audit.csv  01_merge_integrity_checks.csv  01_merge_validation.csv  01_required_sheet_check.csv  01_schema_summary.csv  01_sheet_grain_summary.csv  01_source_sheet_overview.csv  01_standardized_sheet_overview.csv  01_target_distribution.csv  01_target_validation.csv  02_categorical_profile.csv  02_categorical_value_distribution.csv  02_fairness_proxy_review.csv  02_feature_governance_review.csv  02_leakage_review.csv  02_logical_quality_checks_all.csv  02_logical_quality_checks_failed.csv  02_missingness_by_target.csv  02_missingness_summary_all_columns.csv  02_missingness_summary_missing_only.csv  02_numeric_column_review.csv  02_numeric_profile.csv  02_pre_clean_overview.csv  02_target_quality_check.csv  03_baseline_model_feature_list.csv  03_column_lineage.csv  (+242 more)
scripts/: run_cleaning_pipeline.py  run_data_pipeline.py  run_explainability_pipeline.py  run_feature_engineering_pipeline.py  run_governance_pipeline.py  run_model_training_pipeline.py  run_portfolio_monitoring_pipeline.py  run_threshold_selection_pipeline.py
tests/: test_schema.py
(+28 files in other folders)
