[project]
name = "canadian-retail-credit-risk-xai"
version = "0.1.0"
description = "Canadian retail credit risk analytics with explainable default prediction, portfolio monitoring, and model governance."
readme = "README.md"
requires-python = ">=3.10"

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
src = ["src"]
select = ["E", "F", "I", "UP", "B"]
